adjustments driving-licenses

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -222,7 +222,8 @@
         "nepal": "Nepal",
         "pakistan": "Pakistan",
         "peru": "Peru",
-        "adr-certificates": "ADR Certificates"
+        "adr-certificates": "ADR Certificates",
+        "poland": "Poland"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
