--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -222,7 +222,8 @@
         "nepal": "Nepal",
         "pakistan": "Pakistan",
         "peru": "Peru",
-        "adr-certificates": "Certificate ADR"
+        "adr-certificates": "Certificate ADR",
+        "poland": "Polonia"
     },
     "vehicle-info": {
         "switzerland": "Elveția",
