--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -119,17 +119,13 @@
     },
     "specimens": {
         "docis": "DOCIS",
-        "prado-online": "PRADO-online",
-        "prado-glossary": "PRADO (glosar)",
+        "prado":{
+            "title": "PRADO",
+            "prado-online": "PRADO-online",
+            "prado-glossary": "PRADO (glosar)"
+        },
         "edison-td": "EdisonTD",
-        "pc-ue-see": "Specimene P.C.(UE si SEE)",
-        "pc-bura": "Specimene P.C.(by BURA)",
-        "pc-ue-commission": "Specimene P.C.(UE-Comisia Europeana)",
-        "pc-ex-soviet": "Specimene P.C.(Spatiu Ex-Sovietic)",
-        "pc-ukraine": "Specimene P.C.(Ucraina)",
-        "airline-info-handbook": "Doc.UE pentru straini (Airline Information Handbook)",
-        "north-america": "Specimene documente America de Nord",
-        "south-america": "Specimene documente America de Sud",
+        "airline-info-handbook": "Airline Information Handbook - Doc.UE pentru straini",
         "the-eye": "THE-EYE.NL",
         "regula":{
             "title": "REGULA",
@@ -137,6 +133,19 @@
             "banknotes": "REGULA Bancnote",
             "face-comparison": "REGULA Compararea Fetei",
             "foto-face-comparison":"FOTO Compararea Fetei"
+        },
+        "driving-licenses":{
+            "title": "Specimene Permise de Conducere",
+            "pc-ue-see": "Specimene P.C.(UE si SEE)",
+            "pc-bura": "Specimene P.C.(by BURA)",
+            "pc-ue-commission": "Specimene P.C.(UE-Comisia Europeana)",
+            "pc-ex-soviet": "Specimene P.C.(Spatiu Ex-Sovietic)",
+            "pc-ukraine": "Specimene P.C.(Ucraina)"
+        },
+        "america": {
+            "title": "Specimene documente America",
+            "north-america": "Specimene documente America de Nord",
+            "south-america": "Specimene documente America de Sud"
         }
     },
     "tiaf": {
