--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -236,9 +236,8 @@
         "pakistan": "Pakistan",
         "peru": "Peru",
         "adr-certificates": "Certificate ADR",
-        "poland":{
-          "poland-dl": "P.C. Polonia",
-          "letter-dl": "Literă de vontrol P.C.",
+        "poland": "Poland",
+          
     },
     "vehicle-info": {
         "switzerland": "Elveția",
