--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -236,7 +236,7 @@
         "pakistan": "Pakistan",
         "peru": "Peru",
         "adr-certificates": "Certificate ADR",
-        "poland": "Poland",
+        "poland": "Poland"
           
     },
     "vehicle-info": {
