--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -236,7 +236,7 @@
         "pakistan": "Pakistan",
         "peru": "Peru",
         "adr-certificates": "ADR Certificates",
-        "poland": "Poland",
+        "poland": "Poland"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
