--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -235,6 +235,7 @@
         "nepal": "Nepal",
         "pakistan": "Pakistan",
         "peru": "Peru",
+        "rusia": "Russia",
         "adr-certificates": "ADR Certificates",
         "poland": "Poland"
     },
