--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -235,6 +235,7 @@
         "nepal": "Nepal",
         "pakistan": "Pakistan",
         "peru": "Peru",
+        "rusia": "Rusia",
         "adr-certificates": "Certificate ADR",
         "poland": "Poland"
           
