--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -266,6 +266,7 @@
         "great-britain": "Great Britain",
         "netherlands": "Netherlands",
         "poland": "Poland",
+        "slovakia": "Slovakia",
         "ukraine": "Ukraine"
     },
     "digit-calculator":{
