--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -267,6 +267,7 @@
         "great-britain": "Marea Britanie",
         "netherlands": "Olanda",
         "poland": "Polonia",
+        "slovakia": "Slovacia",
         "ukraine": "Ucraina peste 3.5 tone"
     },
     "digit-calculator":{
