--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -233,6 +233,7 @@
         "spain": "Spain",
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
+        "great.britain": "Great Britain",
         "pakistan": "Pakistan",
         "peru": "Peru",
         "rusia": "Russia",
