--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -233,6 +233,7 @@
         "spain": "Spania",
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
+        "great.britain": "Marea Britanie",
         "pakistan": "Pakistan",
         "peru": "Peru",
         "rusia": "Rusia",
