--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -234,6 +234,7 @@
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
         "great.britain": "Great Britain",
+        "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
         "rusia": "Russia",
