--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -234,6 +234,7 @@
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
         "great.britain": "Marea Britanie",
+        "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
         "rusia": "Rusia",
