--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,6 +107,7 @@
                 "costa-rica": "ID Validation Costa Rica",
                 "mexic": "CURP Validation Mexic",
                 "paraguay": "CIN Validation Paraguay",
+                "peru": "DNI Validation Peru",
                 "venezuela": "CNE Validation Venezuela"
             },
             "calculator": {
