--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -270,6 +270,7 @@
         "netherlands": "Netherlands",
         "poland": "Poland",
         "slovakia": "Slovakia",
+        "czech-republic": "Czech Republic",
         "ukraine": "Ukraine"
     },
     "digit-calculator":{
