--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -271,6 +271,7 @@
         "netherlands": "Olanda",
         "poland": "Polonia",
         "slovakia": "Slovacia",
+        "czech-republic": "Cehia",
         "ukraine": "Ucraina peste 3.5 tone"
     },
     "digit-calculator":{
