--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -226,6 +226,9 @@
         },
         "control-digit-vin-usa": "Control digit VIN USA"
     },
+  "travel-docs": {
+        "poland": "Polonia"
+     },
     "driving-licenses": {
         "others": "Other Driving Licenses",
         "usa": "U. S. A.",
