--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -227,7 +227,7 @@
         "control-digit-vin-usa": "Control digit VIN USA"
     },
   "travel-docs": {
-        "poland": "Polonia"
+        "poland": "Poland"
      },
     "driving-licenses": {
         "others": "Other Driving Licenses",
