--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -227,7 +227,7 @@
         "control-digit-vin-usa": "Cifra control VIN auto SUA"
     },
   "travel-docs": {
-        "poland": "Polonia"
+        "poland": "Polonia",
      },
     "driving-licenses": {
         "others": "Alte Permise",
