--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -226,9 +226,9 @@
         },
         "control-digit-vin-usa": "Control digit VIN USA"
     },
-  "travel-docs": {
+  "travel-docs":
         "poland": "Poland",
-     },
+     
     "driving-licenses": {
         "others": "Other Driving Licenses",
         "usa": "U. S. A.",
