--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -226,9 +226,9 @@
         },
         "control-digit-vin-usa": "Cifra control VIN auto SUA"
     },
-  "travel-docs": {
+  "travel-docs":
         "poland": "Polonia",
-     },
+     
     "driving-licenses": {
         "others": "Alte Permise",
         "usa": "S.U.A.",
