--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -226,8 +226,7 @@
         },
         "control-digit-vin-usa": "Control digit VIN USA"
     },
-  "travel-docs":
-        "poland": "Poland",
+  "travel-docs": "poland": "Poland"
      
     "driving-licenses": {
         "others": "Other Driving Licenses",
