--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -226,7 +226,8 @@
         },
         "control-digit-vin-usa": "Cifra control VIN auto SUA"
     },
-  "travel-docs": "poland": "Polonia"
+  "travel-docs": { "poland": "Poland"
+       },
      
     "driving-licenses": {
         "others": "Alte Permise",
