--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -226,7 +226,7 @@
         },
         "control-digit-vin-usa": "Cifra control VIN auto SUA"
     },
-  "travel-docs": { "poland": "Poland"
+  "travel-docs": { "poland": "Polonia"
        },
      
     "driving-licenses": {
