--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -243,7 +243,7 @@
         "peru": "Peru",
         "rusia": "Rusia",
         "adr-certificates": "Certificate ADR",
-        "poland": "Poland"
+        "poland": "Polonia"
           
     },
     "vehicle-info": {
