--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -107,7 +107,7 @@
                 "costa-rica": "Validare ID Costa Rica",
                 "mexic": "Validare CURP Mexic",
                 "paraguay": "Validare CIN Paraguay",
-                "peru": "Validare DNI Peru",
+                "peru": "Verificare persoane Peru",
                 "venezuela": "Validare CNE Venezuela"
             },
             "calculator": {
