--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -266,6 +266,7 @@
         "ukraine": "Ukraine"
     },
     "technical-check":{
+      "croatia": "Croatia",
         "germany": "Germany",
         "france": "France",
         "great-britain": "Great Britain",
