--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -268,6 +268,7 @@
         "ukraine": "Ucraina"
     },
     "technical-check":{
+      "croatia": "Croația",
         "germany": "Germania",
         "france": "Franța",
         "great-britain": "Marea Britanie",
