--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -105,6 +105,7 @@
                 "brazil": "Validare CFP Brazilia",
                 "chile": "Validare RUT Chile",
                 "costa-rica": "Validare ID Costa Rica",
+                "honduras": "Verificare persoane Honduras",
                 "mexic": "Validare CURP Mexic",
                 "paraguay": "Validare CIN Paraguay",
                 "peru": "Verificare persoane Peru",
