--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -249,6 +249,7 @@
         "switzerland": "Switzerland",
         "czech-republic": "Czech Republic",
         "denmark": "Denmark",
+        "estonia": "Estonia",
         "finland": "Finland",
         "france": "France",
         "germany": "Germany",
