--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -251,6 +251,7 @@
         "switzerland": "Elveția",
         "czech-republic": "Cehia",
         "denmark": "Danemarca",
+        "estonia": "Estonia",
         "finland": "Finlanda",
         "france": "Franța",
         "germany": "Germania",
