--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -105,6 +105,7 @@
                 "brazil": "CFP Validation Brazilia",
                 "chile": "RUT Validation Chile",
                 "costa-rica": "ID Validation Costa Rica",
+                "columbia": "ID Validation Columbia",
                 "honduras": "Check people Honduras",
                 "mexic": "CURP Validation Mexic",
                 "paraguay": "CIN Validation Paraguay",
