--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -104,6 +104,7 @@
                 "bosnia": "Validare JMBG Bosnia-H",
                 "brazil": "Validare CFP Brazilia",
                 "chile": "Validare RUT Chile",
+                "columbia": "Validare ID Columbia",
                 "costa-rica": "Validare ID Costa Rica",
                 "honduras": "Verificare persoane Honduras",
                 "mexic": "Validare CURP Mexic",
