--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,6 +106,8 @@
                 "chile": "RUT Validation Chile",
                 "costa-rica": "ID Validation Costa Rica",
                 "columbia": "ID Validation Columbia",
+                "ecuador": "ID Validation Ecuador",
+                "guatemala": "CUI Validation Columbia",
                 "honduras": "Check people Honduras",
                 "mexic": "CURP Validation Mexic",
                 "paraguay": "CIN Validation Paraguay",
