--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -106,6 +106,8 @@
                 "chile": "Validare RUT Chile",
                 "columbia": "Validare ID Columbia",
                 "costa-rica": "Validare ID Costa Rica",
+                "ecuador": "Validare ID Ecuador",
+                "guatemala": "Validare CUI Columbia",
                 "honduras": "Verificare persoane Honduras",
                 "mexic": "Validare CURP Mexic",
                 "paraguay": "Validare CIN Paraguay",
