--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -281,7 +281,7 @@
         "poland": "Polonia",
         "slovakia": "Slovacia",
         "czech-republic": "Cehia",
-        "ukraine": "Ucraina peste 3.5 tone"
+        "ukraine": "Ucraina"
     },
     "digit-calculator":{
         "title": "Calculator Cifra de control",
