--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -244,6 +244,7 @@
         "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
+        "palestina": "Palestina",
         "rusia": "Russia",
         "adr-certificates": "ADR Certificates",
         "poland": "Poland"
