--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -245,6 +245,7 @@
         "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
+        "palestina": "Palestina",
         "rusia": "Rusia",
         "adr-certificates": "Certificate ADR",
         "poland": "Polonia"
