--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
                 "guatemala": "CUI Validation Columbia",
                 "honduras": "Check people Honduras",
                 "mexic": "CURP Validation Mexic",
+                "israel": "ID Validation Israel",
                 "paraguay": "CIN Validation Paraguay",
                 "peru": "Check people Peru",
                 "venezuela": "CNE Validation Venezuela"
