--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -110,6 +110,7 @@
                 "guatemala": "Validare CUI Columbia",
                 "honduras": "Verificare persoane Honduras",
                 "mexic": "Validare CURP Mexic",
+                "israel": "Verificare persoane Israel",
                 "paraguay": "Validare CIN Paraguay",
                 "peru": "Verificare persoane Peru",
                 "venezuela": "Validare CNE Venezuela"
