--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -269,6 +269,7 @@
         "slovakia": "Slovakia",
         "slovenia": "Slovenia",
         "spain": "Spain",
+        "usa": "USA",
         "sweden": "Sweden",
         "ukraine": "Ukraine"
     },
