--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -271,6 +271,7 @@
         "slovakia": "Slovacia",
         "slovenia": "Slovenia",
         "spain": "Spania",
+        "usa": "SUA",
         "sweden": "Suedia",
         "ukraine": "Ucraina"
     },
