--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -248,7 +248,8 @@
         "palestina": "Palestina",
         "rusia": "Russia",
         "adr-certificates": "ADR Certificates",
-        "poland": "Poland"
+        "poland": "Poland",
+        "ukraine": "Ukraine"
     },
     "vehicle-info": {
         "switzerland": "Switzerland",
