--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -249,7 +249,8 @@
         "palestina": "Palestina",
         "rusia": "Rusia",
         "adr-certificates": "Certificate ADR",
-        "poland": "Polonia"
+        "poland": "Polonia",
+        "ukraine": "Ucraina"
           
     },
     "vehicle-info": {
