--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -290,5 +290,8 @@
         "user-input": "Input",
         "result": "Result",
         "calculate": "Calculate"
-    }
+    },
+  "insurance":{
+    "bulgaria" "Bulgaria" 
+  }
 }
