--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -292,5 +292,8 @@
         "user-input": "Introduceți valorile",
         "result": "Rezultat",
         "calculate": "Calculează"
-    }
+    },
+  "insurance":{
+    "bulgaria" "Bulgaria" 
+  }
 }
