--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -291,7 +291,7 @@
         "result": "Result",
         "calculate": "Calculate"
     },
-  "insurance":{
+  "car-insurance":{
     "bulgaria" "Bulgaria" 
   }
 }
