--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -293,7 +293,7 @@
         "result": "Rezultat",
         "calculate": "Calculează"
     },
-  "insurance":{
+  "car-insurance":{
     "bulgaria" "Bulgaria" 
   }
 }
