--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -242,6 +242,7 @@
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
         "great.britain": "Great Britain",
+        "kyrgyzstan": "Kyrgyzstan",
         "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
