--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -243,6 +243,7 @@
         "columbia": "Columbia - VPN",
         "nepal": "Nepal",
         "great.britain": "Marea Britanie",
+        "kyrgyzstan": "Kârgâzstan",
         "india": "India",
         "pakistan": "Pakistan",
         "peru": "Peru",
