--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -263,6 +263,7 @@
         "ireland": "Ireland",
         "italy": "Italy",
         "great-britain": "Great Britain",
+        "newzeeland": "New Zealand",
         "norway": "Norway",
         "netherlands": "Netherlands",
         "portugal": "Portugal",
