--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -265,6 +265,7 @@
         "ireland": "Irlanda",
         "italy": "Italia",
         "great-britain": "Marea Britanie",
+        "newzeeland": "Noua Zeelandă",
         "norway": "Norvegia",
         "netherlands": "Olanda",
         "portugal": "Portugalia",
