--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -209,7 +209,8 @@
             "usa": "USA",
             "canada": "Canada",
             "belarus": "Belarus",
-            "norway": "Norway"
+            "norway": "Norway",
+            "newzeeland": "New Zealand"
         },
         "specimens": {
             "title": "Registration certificate specimens",
