--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -209,7 +209,8 @@
             "usa": "SUA",
             "canada": "Canada",
             "belarus": "Belarus",
-            "norway": "Norvegia"
+            "norway": "Norvegia",
+            "newzeeland": "Noua Zeelandă"
         },
         "specimens": {
             "title": "Specimene certificate de inmatriculare",
