--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -264,6 +264,7 @@
         "ireland": "Ireland",
         "italy": "Italy",
         "great-britain": "Great Britain",
+        "kirgiztan": "Kyrgyzstan",
         "newzeeland": "New Zealand",
         "norway": "Norway",
         "netherlands": "Netherlands",
