--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -266,6 +266,7 @@
         "ireland": "Irlanda",
         "italy": "Italia",
         "great-britain": "Marea Britanie",
+        "kirgiztan": "Kârgâzstan",
         "newzeeland": "Noua Zeelandă",
         "norway": "Norvegia",
         "netherlands": "Olanda",
