--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -53,6 +53,7 @@
             "nif-spain": "Verificare NIF/NIE Spania",
             "national-registry-number-belgium": "Verificare Nr. Registru National Belgia",
             "egn-bulgaria": "Verificare numar EGN Bulgaria",
+            "croatia": "Validare JMBG Croația",
             "romania": {
                 "title": "Validare CNP România",
                 "link1": "România Link 1",
