--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,6 +69,11 @@
                 "link1": "Rijksregisternumer Link1",
                 "link2": "LuDev.be Link2"
             },
+          "italy": {
+                "title": "Validation Codice fiscale",
+                "link1": "Validation Codice fiscale",
+                "link2": "Correspondence between tax code and personal data"
+            },
             "spain": {
                 "title": "CNP Validation Spain",
                 "link1": "DNI/NIE Link1",
