--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -70,8 +70,8 @@
                 "link2": "LuDev.be Link2"
             },
            "italy": {
-                "title": "Validation Codice fiscale",
-                "link1": "Validation Codice fiscale",
+                "title": "Validare Codice fiscale Italia",
+                "link1": "Validare Codice fiscale",
                 "link2": "Coresp. dintre codul fiscal și date pers."
             },      
             "spain": {
