--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,7 +70,7 @@
                 "link2": "LuDev.be Link2"
             },
           "italy": {
-                "title": "Validation Codice fiscale",
+                "title": "Validation Codice fiscale Italy",
                 "link1": "Validation Codice fiscale",
                 "link2": "Correspondence between tax code and personal data"
             },
