--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -222,6 +222,7 @@
             "title": "Registration certificate specimens",
             "ue-vrc": "EU(VRC)",
             "ue-see": "EU/EES",
+            "euro": "EUROPA",
             "non-ue": "NON-EU",
             "usa": "USA"
         },
