--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -222,6 +222,7 @@
             "title": "Specimene certificate de inmatriculare",
             "ue-vrc": "UE(VRC)",
             "ue-see": "UE/SEE",
+            "euro": "EUROPA",
             "non-ue": "NON-UE",
             "usa": "SUA"
         },
