--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -245,6 +245,7 @@
         "others": "Other Driving Licenses",
         "usa": "U. S. A.",
         "canada": "Canada",
+        "australia": "Australia",
         "encoding": "Encondig&Decoding D.L.",
         "spain": "Spain",
         "columbia": "Columbia - VPN",
