--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -245,6 +245,7 @@
     "driving-licenses": {
         "others": "Alte Permise",
         "usa": "S.U.A.",
+        "australia": "Australia",
         "canada": "Canada",
         "encoding": "Encondig&Decoding D.L.",
         "spain": "Spania",
